@@ -42,3 +42,5 @@ CONFIG_SD_DATACRC=y
 CONFIG_ERROR_BUFFER_SIZE=36
 CONFIG_COMMAND_BUFFER_SIZE=120
 CONFIG_BUFFER_COUNT=3
+CONFIG_EEPROM_SIZE=512
+CONFIG_EEPROM_OFFSET=512
