@@ -2,6 +2,8 @@
 	- Bugfix: Properly emulate B-R/B-W (fixes Pirates!)
 	- Bugfix: Close buffers on I (fixes Drazpaint)
 	- reworked source configuration system
+	- M-R returns (random) data
+	- New commands E-R, E-W: Read/write reserved area of EEPROM
 
 2008-01-13 - release 0.5.1
 	- Bugfix: Really disable JTAG - fixes very slow access on some
